# learn-statistics

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  learn-statistics-plan.md  notebooks.md  pyproject.toml
chapters/01-foundations/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/01-foundations/code/: 01_foundations.ipynb
chapters/02-discrete-rvs/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/02-discrete-rvs/code/: 02_discrete_rvs.ipynb
chapters/03-expectation-variance/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/04-continuous-and-joint/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/05-convergence-and-limit-theorems/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/06-point-estimation/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/07-confidence-intervals-and-bootstrap/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/08-hypothesis-testing/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/09-linear-regression/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/10-bayesian-inference/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
scripts/: extract_pages.py  nlm-init-chapter.sh
